@@ -676,6 +676,8 @@ repl call, 0x5DA4D1,	0x5E9A48,	0x5DA401,	"ni_to_diff_for_work_area",			""
 ext walup, 0x5DA555,	0x5E9ACC,	0x5DA485,	"",						""
 repl call, 0x4C0309,	0x4C78FE,	0x4C0399,	"ni_to_diff_for_work_area",			""
 ext walup, 0x4C03EA,	0x4C79D9,	0x4C047A,	"",						""
+repl call, 0x442603,	0x4443D2,	0x442683,	"Tile_m43_Get_field_30_for_city_loc_eval",	""
+repl call, 0x4427B9,	0x444585,	0x442839,	"Tile_m43_Get_field_30_for_city_loc_eval",	""
 
 ignore,	   0x437321,	0x0,		0x0,		"ni_to_diff_for_work_area",			""
 ignore,	   0x4C2695,	0x0,		0x0,		"ni_to_diff_for_work_area",			""
