@@ -185,6 +185,13 @@ max_ai_naval_escorts = 3
 ;   https://forums.civfanatics.com/threads/c3x-exe-mod-including-bug-fixes-stack-bombard-and-much-more.666881/page-95#post-16587093
 ai_worker_requirement_percent = 150
 
+; Deletes two conditions from the AI's city location evaluator that prevent it from founding cities with overlapping work areas. If enabled, the AI
+; will found cities closer together, often separated by only two tiles. (There is a separate condition, not affected by this setting, that prevents
+; the AI from founding closer than that.) The purpose of this setting is to address the problem that increasing the work area of cities (with the
+; city_work_radius setting below) causes the AI to space its cities further apart because larger work areas create more overlap. To solve that, you
+; can active this option and use the minimum_city_separation setting to force AI players, and humans too, to spread their cities out.
+ai_ignores_overlap_for_city_placement = false
+
 [=================]
 [=== BUG FIXES ===]
 [=================]
